--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <div class="container">
       <header><h1>Sign Up</h1></header>
       <main>
-        <form action="/" method="POST" name="signup_page">
+        <form action="api/signup" method="POST" name="signup">
           <section class="each-field">
             <label for="fname">First Name:</label><br />
             <div class="float">
